--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,9 @@
 ========================================*/
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 html {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
@@ -15,6 +18,9 @@ body {
   font-style: normal;
   color: #888;
   overflow-x: hidden;
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
   font-size: 15px;
 }
 
