--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1996,6 +1996,8 @@ ol {
   position: relative;
   padding: 180px 0 50px 0;
   background: #4a8fe0;
+  margin: 50px;
+  opacity: 50%;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
