--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1410,8 +1410,8 @@ ol {
   height: 130%;
   object-fit: cover;
   position: absolute;
-  left: 0;
-  right: 250px;
+  left: 300px;
+  right: 0px;
   top: 0;
   bottom: 0;
   z-index: 1;
