--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,12 +6,13 @@
 ========================================*/
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Signika:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Harmattan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Signika", sans-serif;
+  font-family: "Harmattan", sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #888;
