--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: "Harmattan", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #888;
