--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1262,11 +1262,13 @@ ol {
   border: none;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  border-radius: 5px;
+  border-radius: 50px;
   position: relative;
   z-index: 1;
   margin-right: 7px;
   overflow: hidden;
+  box-shadow: 20px 20px 60px #bebebe,
+  -20px -20px 60px #ffffff
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
