--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2228,6 +2228,29 @@ ol {
 }
 
 /*======================================
+    Sneak Peak Area CSS
+========================================*/
+
+.preview .youtube-video-sneak-peak-container{
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 50%; /* 2:1 Aspect Ratio */
+  height: 0;
+  vertical-align: middle;
+}
+
+.youtube-video-sneak-peak-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  vertical-align: middle;
+}
+
+
+/*======================================
     Features Area CSS
 ========================================*/
 .features {
