--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1998,6 +1998,7 @@ ol {
   position: relative;
   padding: 180px 0 120px 0;
   background: #4a8fe0;
+  background: linear-gradient(90deg, rgba(8,24,40,0.5) 0%, rgba(74,132,224,1) 69%);
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
